# cattreelib

./: .gitignore  README.md  pyproject.toml
cattreelib/: __init__.py  category.py  error.py  path.py  utils.py
tests/: fixtures.py
tests/unit/: test_category.py  test_path.py
